--- a/templates/roadway_near_school.html
+++ b/templates/roadway_near_school.html
@@ -176,7 +176,7 @@
             {# </div>#}
 
         <div class="form-group">
-            <img src="/media/gate.png"><br><br>
+            <img src="/static/gate.png"><br><br>
             <label for="pictures_near_side">8. From near-side looking into far-side:</label>
             <input type="file" id="pictures_near_side" name="pictures_near_side"><br>
             <label for="pictures_far_side">9. From far-side looking into near-side:</label>
